# CMakeUtils

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
CDBSplitter/: CMakeLists.txt
CDBSplitter/src/: Main.cpp
CMake/: Formatting.cmake  Packages.cmake  StaticAnalysis.cmake  Utils.cmake
RunClangTidy/: CMakeLists.txt
RunClangTidy/src/: Main.cpp
